ajuste de dimensionamento

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="background">
     <video id="video-bg" autoplay loop muted> 
-      <source src="./assets/3a5339cb-960b-4b6e-8b1d-51d6295d2d7f.mp4" type="video/mp4">
+      <source src="./assets/videofundo.mp4" type="video/mp4">
     </video>
   </div>
     <p id="texto">CONTAGEM REGRESSIVA DAS FÉRIAS DA MARINONA</p>
