--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="background">
-    <video id="video-bg" autoplay loop muted> 
+    <video id="video-bg" autoplay loop muted playsinline> 
       <source src="./assets/videofundo.mp4" type="video/mp4">
     </video>
   </div>
